bgd/bgd-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: color-sample-app
  name: color-sample-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: color-sample-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: color-sample-app
    spec:
      containers:
      - image: quay.io/redhatworkshops/bgd:latest
        name: color-sample-app
        resources: {}
---
